--- a/Android/scenes/show/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/show/src/main/res/values-zh/strings.xml
@@ -235,4 +235,11 @@
         <item>hidden</item>
         <item>fix</item>
     </string-array>
+
+    <string-array name="show_sr_type">
+        <item>1倍超分</item>
+        <item>1.33倍超分</item>
+        <item>1.5倍超分</item>
+        <item>2 倍超分</item>
+    </string-array>
 </resources>
