--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
@@ -179,3 +179,4 @@
 "Turn on AGC" = "Turn on AGC";
 
 "DemoTestDesc" = "This product is for testing only, not for commerce.\nEvery room will be maintained for 20 minutes.";
+"The current microphone has been muted" = "The current microphone has been muted";
