--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
@@ -186,3 +186,4 @@
 "AIAEC Audition" = "AIAEC Audition";
 "AGC Audition" = "AGC Audition";
 "Voice room announcement changed!" = "Voice room announcement changed!";
+"Time limit desc" = "The experience limit has been reached. This room has been closed";
