--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -233,3 +233,4 @@
 "Time limit desc" = "The experience limit has been reached. This room has been closed";
 "Close Bot" = "关闭机器人";
 "Other Settings" = "其他设置";
+"Welcome" = "欢迎";
