--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
@@ -120,7 +120,7 @@
 "Robot Volume" = "Robot Volume";
 "ACEQ" = "Agora Chatroom 2.0 EQ";
 "High" = "High";
-"Middle" = "Middle";
+"Medium" = "Medium";
 "Off" = "Off";
 "On" = "On";
 "AINS" = "AINS";
