--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -118,7 +118,7 @@
 "Audio Settings" = "音效设置";
 "ACEQ" = "声网语聊房 2.0 EQ";
 "High" = "高";
-"Middle" = "中";
+"Medium" = "中";
 "Off" = "关闭";
 "On" = "开启";
 "AINS" = "AI降噪";
