--- a/Android/scenes/voice/voice/src/main/res/values/strings.xml
+++ b/Android/scenes/voice/voice/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="voice_chatroom_gift_title">Gifts</string>
     <string name="voice_chatroom_gift_dialog_send">Send</string>
     <string name="voice_gift_sent">sent </string>
-    <string name="voice_chatroom_gift_notice">User %1$s gifts User %2$s a Rocket</string>
+    <string name="voice_chatroom_gift_notice">%1$s gifts %2$s a Rocket</string>
 
     <string name="voice_chatroom_send_gift_fail">Gift Sent Failed</string>
     <string name="voice_chatroom_create_tip1">This product is for testing only, not for commerce.</string>
