--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
@@ -187,3 +187,7 @@
 "AGC Audition" = "AGC Audition";
 "Voice room announcement changed!" = "Voice room announcement changed!";
 "Time limit desc" = "The experience limit has been reached. This room has been closed";
+"You were kicked off from the room" = "You were kicked off from the room";
+"This room has been dissolved by the host" = "This room has been dissolved by the host";
+"you were offline!" = "you were offline!";
+"illegal check" = "No content that violates relevant laws, regulations and policies, please edit again";
